--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-   <script src="dist/umd/vue.js"></script>
-   <script>
-     new Vue({
-       el:'#app',
-       data(){
-         return {a:1}
-       }
-     })
-    console.log(Vue.$options)
-   </script>
+  <script src="dist/umd/vue.js"></script>
+  <script>
+    let vm = new Vue({
+      el: '#app',
+      data() {
+        return {
+          a: 1
+        }
+      }
+    })
+  </script>
 </body>
+
 </html>
