--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       el: '#app',
       data() {
         return {
-          a: 1
+          a: {a:{a:1}}
         }
       }
     })
+    console.log(vm._data)
+    vm._data.a={b:1}
   </script>
 </body>
 
