--- a/index.html
+++ b/index.html
@@ -14,12 +14,15 @@
       el: '#app',
       data() {
         return {
-          a: {a:{a:1}}
+          arr: [{b:123}]
         }
       }
     })
-    console.log(vm._data)
-    vm._data.a={b:1}
+
+    // 开发功能时很少对数组索引进行操作，为了考虑性能不对数组进行拦截
+    // 拦截可以改变数组的方法进行操作
+    vm._data.arr.push({b:2})
+    vm._data.arr[1].b=100
   </script>
 </body>
 
