feat: 根据ast树生成代码

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: zihao.chen
  * @Date: 2020-09-18 15:33:15
  * @LastEditors: zihao.chen
- * @LastEditTime: 2021-01-21 14:06:55
+ * @LastEditTime: 2021-02-03 16:34:10
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div id="app" class="test">
+  <div id="app" class="test" style="color: red;">
     {{arr}}
     <ul class="ul-test">
       <li>{{school.name}}</li>
