--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: zihao.chen
  * @Date: 2020-09-18 15:33:15
  * @LastEditors: zihao.chen
- * @LastEditTime: 2021-02-03 16:34:10
+ * @LastEditTime: 2021-03-01 16:03:47
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -16,9 +16,10 @@
 
 <body>
   <div id="app" class="test" style="color: red;">
-    {{arr}}
+    hello {{arr}}
     <ul class="ul-test">
       <li>{{school.name}}</li>
+      <li>test1</li>
     </ul>
   </div>
   <script src="dist/umd/vue.js"></script>
