feat: 虚拟dom转换成真实dom

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: zihao.chen
  * @Date: 2020-09-18 15:33:15
  * @LastEditors: zihao.chen
- * @LastEditTime: 2021-03-11 17:14:39
+ * @LastEditTime: 2021-03-12 09:56:58
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-  <div id="app" class="test" style="color: red;">hello {{name}} world {{msg}}
-  <span>hello</span>
+  <div id="app" class="test" style="color: red;">
+    hello {{name}} world {{msg}}
   </div>
   <script src="dist/umd/vue.js"></script>
   <script>
